--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,11 @@
+# Build optimizations
 GENERATE_SOURCEMAP=false
 INLINE_RUNTIME_CHUNK=false
 IMAGE_INLINE_SIZE_LIMIT=0
+
+# API Configuration (update with your actual backend URL)
+REACT_APP_API_URL=https://your-backend-url.herokuapp.com
+
+# Build settings
+CI=false
+NODE_ENV=production
