--- a/netlify.toml
+++ b/netlify.toml
@@ -7,7 +7,25 @@
   NPM_FLAGS = "--legacy-peer-deps"
   GENERATE_SOURCEMAP = "false"
   INLINE_RUNTIME_CHUNK = "false"
+  CI = "false"
+  REACT_APP_API_URL = "https://your-backend-url.herokuapp.com"
   
+# Context-specific builds
+[context.production]
+  environment = { NODE_ENV = "production" }
+
+[context.deploy-preview]
+  environment = { NODE_ENV = "staging" }
+
+[context.branch-deploy]
+  environment = { NODE_ENV = "development" }
+  
+[[redirects]]
+  from = "/api/*"
+  to = "https://your-backend-url.herokuapp.com/api/:splat"
+  status = 200
+  force = true
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
