Prepare for Netlify: Remove admin backend dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@
 # Excluded Folders
 /OFF
 
+# Database files (backend only - not for static deployment)
+/db/*.json
+/db/admin_server.js
 
 # Misc
 .DS_Store
