--- a/package.json
+++ b/package.json
@@ -8,23 +8,16 @@
     "npm": ">=8.0.0"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "chart.js": "^4.5.1",
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "react-scripts": "5.0.1",
-    "recharts": "^3.3.0"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "CI=false react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "admin-server": "node db/admin_server.js"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
