Configure for Render.com deployment - works locally and in production

--- a/.env.production
+++ b/.env.production
@@ -3,8 +3,8 @@ GENERATE_SOURCEMAP=false
 INLINE_RUNTIME_CHUNK=false
 IMAGE_INLINE_SIZE_LIMIT=0
 
-# API Configuration (update with your actual backend URL)
-REACT_APP_API_URL=https://your-backend-url.herokuapp.com
+# API Configuration (UPDATE THIS with your Render.com backend URL)
+REACT_APP_API_URL=https://your-app-name.onrender.com
 
 # Build settings
 CI=false
