--- a/.env.production
+++ b/.env.production
@@ -3,8 +3,8 @@ GENERATE_SOURCEMAP=false
 INLINE_RUNTIME_CHUNK=false
 IMAGE_INLINE_SIZE_LIMIT=0
 
-# API Configuration (UPDATE THIS with your Render.com backend URL)
-REACT_APP_API_URL=https://your-app-name.onrender.com
+# API Configuration - REPLACE WITH YOUR ACTUAL RENDER.COM URL
+REACT_APP_API_URL=https://ecommerce-admin-backend.onrender.com
 
 # Build settings
 CI=false
