Update with actual Render.com backend URL

--- a/.env.production
+++ b/.env.production
@@ -3,8 +3,8 @@ GENERATE_SOURCEMAP=false
 INLINE_RUNTIME_CHUNK=false
 IMAGE_INLINE_SIZE_LIMIT=0
 
-# API Configuration - REPLACE WITH YOUR ACTUAL RENDER.COM URL
-REACT_APP_API_URL=https://ecommerce-admin-backend.onrender.com
+# API Configuration - Your Render.com backend URL
+REACT_APP_API_URL=https://ecom-update-dzhp.onrender.com
 
 # Build settings
 CI=false
