Prepare for GitHub push: Add all files and updates

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,9 @@ REACT_APP_API_URL=https://your-backend-url.herokuapp.com
 
 # Node Environment (DO NOT CHANGE)
 NODE_ENV=production
+
+## Local development placeholders (copy to .env for local runs)
+JWT_SECRET=replace-with-local-jwt-secret
+ADMIN_PASSWORD=replace-with-local-admin-password
+FRONTEND_URL=http://localhost:3000
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/ecommerce_db
