--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.5.1",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "morgan": "^1.10.0",
     "express": "^4.21.2",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^3.3.2",
+    "pg": "^8.16.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
