feat: Implement pagination, remove price filter, and fix order cancellation
Major Updates:
- Added pagination with 12 products per page with arrow navigation
- Removed inappropriate price filter (products in lakhs, not thousands)
- Fixed order cancellation with proper backend route
- Enhanced Add to Cart UX with quantity display
- Polished Home page with About and Platform sections
- Improved Orders page header design

Backend Changes:
- Added PUT /api/orders/:id/cancel endpoint for user cancellations
- Fixed order creation errors and response handling

Frontend Changes:
- ProductList: Pagination controls, removed price filter
- ProductCard: Shows 'Added (qty)' feedback
- MyOrders: Fixed cancellation endpoint, polished header
- Home: Added About ProLab and Available On sections
- Cart: Fixed response handling for order creation

UI/UX Improvements:
- Better spacing between sidebar and product grid
- Smooth scroll to top on page change
- Visual feedback for disabled pagination buttons
- Cleaner filter sidebar without useless price range

Documentation:
- Added PAGINATION_IMPLEMENTATION.md
- Added PRICE_FILTER_REMOVAL.md
- Added LATEST_FIXES_REPORT.md

--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,18 @@
-# Example environment variables for Netlify deployment
-# Copy this to .env.production and update with your actual values
+# Frontend Configuration
+REACT_APP_API_URL=http://localhost:5000
 
-# Build optimizations (DO NOT CHANGE)
-GENERATE_SOURCEMAP=false
-INLINE_RUNTIME_CHUNK=false
-IMAGE_INLINE_SIZE_LIMIT=0
-CI=false
-
-# API Configuration (REQUIRED - Update with your backend URL)
-REACT_APP_API_URL=https://your-backend-url.herokuapp.com
-
-# Node Environment (DO NOT CHANGE)
-NODE_ENV=production
-
-## Local development placeholders (copy to .env for local runs)
-JWT_SECRET=replace-with-local-jwt-secret
-ADMIN_PASSWORD=replace-with-local-admin-password
+# Backend Configuration
 FRONTEND_URL=http://localhost:3000
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/ecommerce_db
+JWT_SECRET=your_jwt_secret_key_change_in_production
+DATABASE_URL=./ecommerce.db
 
-# Razorpay Payment Gateway (TEST MODE)
-# Get your credentials from: https://dashboard.razorpay.com/app/keys
-RAZORPAY_KEY_ID=rzp_test_1234567890abcd
-RAZORPAY_KEY_SECRET=your_test_secret_key_here
+# Email Configuration (Optional)
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USER=your-email@gmail.com
+# SMTP_PASS=your-app-password
 
-# For LIVE MODE (after KYC verification):
-# RAZORPAY_KEY_ID=rzp_live_XXXXXXXXXX
-# RAZORPAY_KEY_SECRET=your_live_secret_key_here
+# Production Settings
+# NODE_ENV=production
+# FRONTEND_URL=https://yourdomain.com
+# JWT_SECRET=generate-a-secure-random-string-here
