--- a/package.json
+++ b/package.json
@@ -8,16 +8,24 @@
     "npm": ">=8.0.0"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
     "bcryptjs": "^2.4.3",
     "better-sqlite3": "^12.4.5",
     "chart.js": "^4.5.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "csurf": "^1.11.0",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "express-rate-limit": "^8.2.1",
+    "express-validator": "^7.3.1",
+    "framer-motion": "^12.23.24",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.555.0",
     "morgan": "^1.10.0",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.1",
@@ -28,7 +36,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
-    "recharts": "^3.3.0"
+    "recharts": "^3.3.0",
+    "tailwind-merge": "^3.4.0",
+    "validator": "^13.15.23"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -55,7 +65,11 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.22",
     "axios": "^1.13.2",
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.3.0",
+    "postcss": "^8.5.6",
+    "puppeteer": "^24.31.0",
+    "tailwindcss": "^3.4.1"
   }
 }
